--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,6 +395,7 @@ p {
   font-size: 1.3rem;
 }
 .timeline-item .tl-duration {
+  margin-top: 4px;
   padding: 0.2rem 0.6rem;
   background-color: var(--color-grey-5);
   border-radius: 15px;
