--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -417,6 +417,7 @@ p {
   }
 
   .tl-duration {
+    margin-top: 4px;
     padding: 0.2rem 0.6rem;
     background-color: var(--color-grey-5);
     border-radius: 15px;
