--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -112,7 +112,7 @@ section {
     box-shadow: var(--box-shadow-1);
     i {
       font-size: 1.2rem;
-      color: var(--color-grey-2);
+      color: var(--color-primary);
       pointer-events: none;
     }
   }
