--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,6 +17,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
+  --color-i: #ffffff;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
 }
@@ -33,6 +34,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
+  --color-i: #ffffff;
 }
 
 body {
@@ -112,7 +114,7 @@ section {
     box-shadow: var(--box-shadow-1);
     i {
       font-size: 1.2rem;
-      color: var(--color-primary);
+      color: var(--color-i);
       pointer-events: none;
     }
   }
@@ -120,7 +122,7 @@ section {
     background-color: var(--color-secondary);
     transition: all 0.4s ease-in-out;
     i {
-      color: var(--color-white);
+      color: var(--color-i);
     }
   }
 }
@@ -144,7 +146,7 @@ section {
   }
   i {
     font-size: 1.4rem;
-    color: var(--color-grey-2);
+    color: var(--color-i);
     pointer-events: none;
   }
 }
