--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
+  --color-i: #ffffff;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
 }
@@ -34,6 +35,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
+  --color-i: #ffffff;
 }
 
 body {
@@ -114,7 +116,7 @@ section {
 }
 .controls .control i {
   font-size: 1.2rem;
-  color: var(--color-primary);
+  color: var(--color-i);
   pointer-events: none;
 }
 .controls .active-btn {
@@ -122,7 +124,7 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .controls .active-btn i {
-  color: var(--color-white);
+  color: var(--color-i);
 }
 
 .theme-btn {
@@ -145,7 +147,7 @@ section {
 }
 .theme-btn i {
   font-size: 1.4rem;
-  color: var(--color-grey-2);
+  color: var(--color-i);
   pointer-events: none;
 }
 
