--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -415,6 +415,7 @@ p {
 
     i {
       font-size: 1.3rem;
+      color: var(--color-i);
     }
   }
 
@@ -595,7 +596,7 @@ p {
       align-items: center;
 
       .icon {
-        background-color: var(--color-primary);
+        background-color: var(--color-secondary);
         border-radius: 50%;
         width: 50px;
         height: 50px;
@@ -608,7 +609,7 @@ p {
 
         i {
           font-size: 1.5rem;
-          color: var(--color-white);
+          color: var(--color-i);
           margin: 0 1rem;
         }
 
@@ -616,7 +617,7 @@ p {
           background-color: var(--color-white);
 
           i {
-            color: var(--color-primary);
+            color: var(--color-i);
           }
         }
       }
@@ -656,6 +657,7 @@ p {
 
           i {
             font-size: 1.3rem;
+            color: var(--color-i);
           }
         }
       }
@@ -748,6 +750,7 @@ p {
     background-color: var(--color-secondary);
     border-radius: 55%;
     padding: 1rem;
+    color: var(--color-i);
   }
   &::before {
     content: "";
