--- a/styles/styles.css
+++ b/styles/styles.css
@@ -451,6 +451,10 @@ p {
   filter: grayscale(0);
   transform: scale(1.1);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: left;
+     object-position: left;
 }
 .blog img {
   width: 100%;
@@ -507,7 +511,7 @@ p {
   background-color: var(--color-white);
 }
 .blog .blog-text .icons .icon:hover i {
-  color: var(--color-i);
+  color: var(--color-black);
 }
 
 .contact-content-con {
