--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -555,6 +555,8 @@ p {
       filter: grayscale(0);
       transform: scale(1.1);
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+      object-fit: cover;
+      object-position: left;
     }
   }
 
@@ -617,7 +619,7 @@ p {
           background-color: var(--color-white);
 
           i {
-            color: var(--color-i);
+            color: var(--color-black);
           }
         }
       }
