--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -541,6 +541,9 @@ p {
 .blog {
   flex: 1; /* Per far espandere gli elementi su tre colonne */
   position: relative;
+
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-grey-5);
   border-radius: 5px;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
@@ -573,7 +576,10 @@ p {
   .blog-text {
     margin-top: -7px;
     padding: 1.1rem;
-    border-top: 8px solid var(--color-secondary);
+    border-top: 16px solid var(--color-secondary);
+
+    display: flex;
+    flex-direction: column;
 
     h4 {
       font-size: 1.5rem;
@@ -591,36 +597,37 @@ p {
       line-height: 2rem;
       padding-bottom: 1rem;
     }
+  }
+  .icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    padding-bottom: 1rem;
 
-    .icons {
+    .icon {
+      background-color: var(--color-secondary);
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      margin: 0 0.8rem;
+      cursor: pointer;
+      transition: all 0.4s ease-in-out;
 
-      .icon {
-        background-color: var(--color-secondary);
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 0.8rem;
-        cursor: pointer;
-        transition: all 0.4s ease-in-out;
+      i {
+        font-size: 1.5rem;
+        color: var(--color-i);
+        margin: 0 1rem;
+      }
+
+      &:hover {
+        background-color: var(--color-white);
 
         i {
-          font-size: 1.5rem;
-          color: var(--color-i);
-          margin: 0 1rem;
-        }
-
-        &:hover {
-          background-color: var(--color-white);
-
-          i {
-            color: var(--color-black);
-          }
+          color: var(--color-black);
         }
       }
     }
