--- a/styles/styles.css
+++ b/styles/styles.css
@@ -422,7 +422,7 @@ p {
   color: var(--color-grey-2);
 }
 
-.port-text {
+.blog-text {
   padding: 4rem 0 0 0;
   text-align: center;
 }
@@ -609,7 +609,7 @@ p {
 .contact-content-con .right-contact .i-c-2 :last-child {
   margin-left: 1.5rem;
 }
-.contact-content-con .right-contact .submit-btn {
+.contact-content-con .right-contact .submit-btn-con {
   display: flex;
   justify-content: flex-start;
 }
@@ -655,6 +655,51 @@ p {
   color: var(--color-i);
 }
 .main-btn:hover::before {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  transform: translateX(0);
+  transition: all 0.4s ease-out;
+}
+
+.submit-btn {
+  cursor: pointer;
+  border-radius: 50px;
+  background-color: var(--color-primary);
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+.submit-btn .submit-btn-text {
+  padding: 0 2rem;
+  z-index: 2;
+}
+.submit-btn .submit-btn-icon {
+  background-color: var(--color-secondary);
+  border-radius: 55%;
+  padding: 1rem;
+  color: var(--color-i);
+  z-index: 2;
+}
+.submit-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  transition: all 0.4s ease-out;
+  z-index: 1;
+}
+.submit-btn:hover {
+  transition: all 0.4s ease-out;
+  color: var(--color-i);
+}
+.submit-btn:hover::before {
   width: 100%;
   height: 100%;
   background-color: var(--color-secondary);
