--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -448,89 +448,11 @@ p {
   }
 }
 
-//Portfolios
-.port-text {
+//Blogs Section
+.blog-text {
   padding: 4rem 0 0 0;
   text-align: center;
 }
-
-// /* .portfolios */
-// .portfolios {
-//   display: flex;
-//   flex-wrap: wrap; /* Abilita il wrapping degli elementi */
-//   margin-top: 3rem;
-//   gap: 20px; /* Aggiunge spazio tra gli elementi */
-//   .portfolio-item {
-//     position: relative;
-//     border-radius: 15px;
-//     width: calc(
-//       50% - 10px
-//     ); /* Imposta la larghezza degli elementi al 50% con uno spazio di 10px tra di essi */
-//     margin-bottom: 20px; /* Aggiunge margine inferiore agli elementi */
-//     img {
-//       width: 100%;
-//       height: 300px;
-//       object-fit: contain;
-//       border-radius: 15px;
-//     }
-//     .hover-items {
-//       width: 100%;
-//       height: 100%;
-//       background-color: var(--color-secondary);
-//       position: absolute;
-//       left: 0;
-//       top: 0;
-//       border-radius: 15px;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       flex-direction: column;
-//       opacity: 0;
-//       transform: scale(0);
-//       transition: all 0.4s ease-in-out;
-//       h3 {
-//         font-size: 1.5rem;
-//         color: var(--color-white);
-//         margin-bottom: 1.5rem;
-//       }
-// .icons {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   .icon {
-//     background-color: var(--color-primary);
-//     border-radius: 50%;
-//     width: 50px;
-//     height: 50px;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     margin: 0 1rem;
-//     cursor: pointer;
-//     transition: all 0.4s ease-in-out;
-//     i {
-//       font-size: 1.5rem;
-//       color: var(--color-white);
-//       margin: 0 1rem;
-//     }
-//     &:hover {
-//       background-color: var(--color-white);
-//       i {
-//         color: var(--color-primary);
-//       }
-//     }
-//   }
-// }
-//     }
-//   }
-// }
-
-// .portfolios .portfolio-item:hover .hover-items {
-//   opacity: 1;
-//   transform: scale(1);
-// }
-
-//Blogs Section
 .blogs {
   display: flex;
   flex-wrap: wrap; /* Per far scendere gli elementi quando lo spazio è insufficiente */
@@ -728,7 +650,7 @@ p {
         margin-left: 1.5rem;
       }
     }
-    .submit-btn {
+    .submit-btn-con {
       display: flex;
       justify-content: flex-start;
     }
@@ -768,6 +690,51 @@ p {
     transform: translateX(100%);
     transition: all 0.4s ease-out;
     z-index: -1;
+  }
+  &:hover {
+    transition: all 0.4s ease-out;
+    color: var(--color-i);
+    &::before {
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      transform: translateX(0);
+      transition: all 0.4s ease-out;
+    }
+  }
+}
+
+.submit-btn {
+  cursor: pointer;
+  border-radius: 50px;
+  background-color: var(--color-primary);
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  overflow: hidden;
+  .submit-btn-text {
+    padding: 0 2rem;
+    z-index: 2;
+  }
+  .submit-btn-icon {
+    background-color: var(--color-secondary);
+    border-radius: 55%;
+    padding: 1rem;
+    color: var(--color-i);
+    z-index: 2;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: all 0.4s ease-out;
+    z-index: 1;
   }
   &:hover {
     transition: all 0.4s ease-out;
