--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -134,12 +134,12 @@
 
   .main-title {
     h2 {
-      font-size: 2rem;
+      font-size: 2rem !important;
       span {
-        font-size: 2.3rem;
+        font-size: 2rem !important;
       }
       .bg-text {
-        font-size: 2.3rem;
+        font-size: 2.9rem !important;
       }
     }
   }
@@ -173,10 +173,6 @@
     }
   }
 
-  .name > span {
-    white-space: wrap !important;
-  }
-
   .contact-item {
     flex-direction: row;
     margin: 1rem 2;
@@ -192,17 +188,28 @@
   .submit-btn {
     justify-content: center !important;
   }
-  // .portfolios {
-  //   display: flex;
-  //   flex-direction: column;
-  // }
+  .main-title {
+    margin-top: 1.2rem;
+    h2 {
+      font-size: 2.4rem !important;
+      span {
+        font-size: 2.4rem !important;
+      }
+      .bg-text {
+        font-size: 3rem !important;
+      }
+    }
+  }
+
+  .blog-text {
+    padding: 2rem 0 0 0;
+  }
 }
 
 @media screen and (max-width: 700px) {
-  .container {
-    padding: 7rem 3rem;
+  .name > span {
+    white-space: wrap !important;
   }
-
   .controls {
     top: auto;
     bottom: 0;
@@ -233,9 +240,9 @@
 
   .main-title {
     h2 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       span {
-        font-size: 3rem;
+        font-size: 2.5rem;
       }
       .bg-text {
         font-size: 4rem;
@@ -246,11 +253,14 @@
 
 @media screen and (max-width: 970px) {
   .container {
-    padding: 7rem 6rem;
+    padding: 4rem 7rem !important;
   }
 
   .about-container .left-about {
     padding-right: 0rem;
+    h4 {
+      text-align: center;
+    }
   }
 
   .header-content {
@@ -265,7 +275,7 @@
   }
 
   .left-header .image {
-    width: 40%;
+    width: 60%;
     margin: 0 auto;
   }
 
@@ -302,6 +312,13 @@
 }
 
 @media screen and (max-width: 1070px) {
+  section {
+    padding: 3rem 18rem;
+  }
+  .container {
+    padding: 7rem 10rem;
+  }
+
   .controls {
     top: auto;
     bottom: 0;
@@ -396,7 +413,7 @@
   .main-title {
     h2 {
       .bg-text {
-        font-size: 5.5rem;
+        font-size: 6.4rem;
       }
     }
   }
