add project + refactoring

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -429,7 +428,7 @@ p {
 
 .blogs {
   display: flex;
-  flex-wrap: wrap; /* Per far scendere gli elementi quando lo spazio è insufficiente */
+  flex-wrap: wrap;
   gap: 2rem;
   margin-top: 3rem;
 }
